--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ button {
   text-align: center;
   font-size: 20px;
   text-align: center;
+  margin-top: 10px;
 }
 
 ul {
@@ -64,23 +65,24 @@ ul {
   flex-wrap: wrap;
   list-style: none;
   gap: 10px;
-  white-space: nowrap;
-  padding: 0;
 }
 
 ul li {
   flex-grow: 1;
   padding: 15px;
-  background-color: #fffdf8;
+  background-color: #ffffff;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
-  font-size: 20px;
+  font-size: 16px;
   border-radius: 8px;
-  color: #8f8f8f;
-  font-weight: bold;
-  text-align: center;
+  color: #04131c;
+  word-wrap: break-word;
+  white-space: normal;
+  width: 100%;
+  height: auto;
 }
+
 ul li:hover {
-  background-color: #0369A1;
+  background-color: #0369a1;
 }
 
 button:hover {
