--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,8 @@ h1 {
 
 #post {
   font-family: 'Rubik', sans-serif;
-  margin: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   display: flex;
   justify-content: center;
   font-size: 20px;
@@ -65,6 +66,9 @@ ul {
   flex-wrap: wrap;
   list-style: none;
   gap: 10px;
+ margin: 0;
+ width: 100%;
+
 }
 
 ul li {
